--- a/main.css
+++ b/main.css
@@ -15,11 +15,38 @@ a {
   text-decoration: none;
 }
 
+p,
+span {
+  color: #464646;
+  font-size: 1.15rem;
+}
+
+p {
+  font-family: "Quicksand", sans-serif;
+}
+
+span {
+  font-family: "Nunito", sans-serif;
+}
+
+h1 {
+  font-family: "Nunito", sans-serif;
+  font-weight: 700;
+  line-height: 75px;
+  font-size: 2.8rem;
+}
+
+h2 {
+  font-size: 1.2rem;
+  color: #377dff;
+  font-family: "Quicksand", sans-serif;
+  font-weight: 600;
+  line-height: 24px;
+}
+
 img {
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
 }
 
 .btn {
@@ -29,9 +56,20 @@ img {
   border-radius: 24px;
 }
 
-header {
+header,
+.about-us,
+.services {
   padding: 40px;
   max-width: 1600px;
+  margin: 0 auto;
+}
+
+@media screen and (max-width: 575px) {
+  header,
+  .about-us,
+  .services {
+    padding: 40px 10px;
+  }
 }
 
 .nav {
@@ -97,7 +135,6 @@ main {
   background-size: cover;
   width: 100%;
   margin-top: 20px;
-  min-height: 100vh;
 }
 
 @media screen and (max-width: 1345px) {
@@ -124,17 +161,14 @@ main .main__container {
   font-family: "Nunito", sans-serif;
 }
 
-main .main__container .heading__wrapper {
+main .main__container h1 {
   text-align: center;
-  font-size: 1.6rem;
   font-weight: 800;
 }
 
 main .main__container span {
   text-align: center;
-  color: #464646;
   opacity: 0.6;
-  font-size: 1.15rem;
 }
 
 main .main__container a {
@@ -148,16 +182,15 @@ main .main__container a {
 main .main__container a:hover {
   -webkit-transform: scale(1.1);
           transform: scale(1.1);
-  -webkit-transition: .5s all;
-  transition: .5s all;
+  -webkit-transition: 0.5s all;
+  transition: 0.5s all;
 }
 
 @media screen and (max-width: 768px) {
   main .main__container {
-    gap: .65rem;
+    gap: 0.65rem;
   }
-  main .main__container .heading__wrapper {
-    font-size: 1.25rem;
+  main .main__container h1 {
     padding: 0px 20px;
   }
   main .main__container span {
@@ -174,11 +207,414 @@ main .main__container a:hover {
     margin-top: 0px;
     gap: 1rem;
   }
-  main .main__container .heading__wrapper {
-    font-size: 1.1rem;
+  main .main__container h1 {
+    font-size: 2rem;
+    line-height: 41px;
   }
   main .main__container span {
-    font-size: .90rem;
+    font-size: 0.9rem;
+  }
+}
+
+.about-us {
+  text-align: center;
+}
+
+@media screen and (max-width: 768px) {
+  .about-us .about-us__header h1 {
+    font-size: 2rem;
+    padding: 0px 5px;
+    line-height: 41px;
+    margin-top: 20px;
+  }
+}
+
+.about-us__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 1.75rem;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-family: "Quicksand", sans-serif;
+}
+
+.about-us__wrapper .text-container {
+  text-align: justify;
+  max-width: 530px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 3rem;
+  width: 100%;
+}
+
+@media screen and (max-width: 992px) {
+  .about-us__wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .about-us__wrapper .text-container {
+    max-width: 100%;
+  }
+}
+
+.about-us__wrapper .button-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 2rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-weight: 600;
+}
+
+.about-us__wrapper .button-container .btn_about {
+  background: #377dff;
+  color: #fff;
+}
+
+.about-us__wrapper .button-container .btn_about:hover {
+  -webkit-transition: 0.4s all;
+  transition: 0.4s all;
+  background: #fff;
+  color: #377dff;
+}
+
+.about-us__wrapper .button-container .btn_play {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 0.55rem;
+}
+
+.about-us__wrapper .button-container .btn_play .play-svg {
+  fill: #377dff;
+}
+
+.about-us__wrapper .button-container .btn_play:hover {
+  background: #377dff;
+  color: #fff;
+}
+
+.about-us__wrapper .button-container .btn_play:hover .play-svg {
+  fill: #fff !important;
+  -webkit-transition: 0.4s all;
+  transition: 0.4s all;
+}
+
+@media screen and (max-width: 768px) {
+  .about-us__wrapper .text-container {
+    gap: 1rem;
+  }
+  .about-us__wrapper .text-container p {
+    font-size: 0.95rem;
+    padding: 0 20px;
+  }
+  .about-us__wrapper .button-container {
+    gap: 1rem;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .about-us__wrapper .button-container a {
+    font-size: 0.9rem;
+  }
+  .about-us__wrapper .button-container .btn_play {
+    padding: 12px 30px !important;
+  }
+}
+
+.lightbox {
+  /** Default lightbox to hidden */
+  display: none;
+  /** Position and style */
+  position: fixed;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.8);
+}
+
+.lightbox:target {
+  /** Remove default browser outline */
+  outline: none;
+  /** Unhide lightbox **/
+  display: block;
+}
+
+/** videoModal **/
+#videoModal {
+  border-radius: 0;
+  width: 100%;
+  padding: 20px;
+  margin: auto;
+}
+
+@media screen and (max-width: 992px) {
+  #videoModal {
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
+    display: flex !important;
+    width: 100%;
+    height: 100%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+#videoModal .modal-header {
+  border: 0;
+  color: #fff;
+  position: relative;
+  height: 35px;
+}
+
+#videoModal .modal-header h3 {
+  font-size: 18px;
+  line-height: 22px;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 5px;
+}
+
+#videoModal .modal-body {
+  height: 489px;
+  padding: 0;
+  max-height: none;
+  overflow: hidden;
+}
+
+@media screen and (max-width: 992px) {
+  #videoModal .modal-body {
+    height: 50%;
+  }
+  #videoModal .modal-body iframe {
+    height: 100%;
+    width: 100%;
+  }
+}
+
+#videoModal .modal-footer:empty {
+  display: none !important;
+}
+
+#videoModal .close {
+  margin: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  border: 0;
+  background: transparent;
+}
+
+#videoModal .close svg {
+  fill: #fff !important;
+  color: #fff !important;
+}
+
+.services {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.services__text-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  max-width: 520px;
+  gap: 1rem;
+}
+
+@media screen and (max-width: 1172px) {
+  .services__text-container {
+    max-width: 100%;
+  }
+}
+
+.services__text-container p {
+  text-align: justify;
+  line-height: 32px;
+}
+
+@media screen and (max-width: 768px) {
+  .services__text-container p {
+    font-size: 0.95rem;
+    padding: 0 20px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .services__text-container h1 {
+    font-size: 2rem;
+    line-height: 41px;
+    margin-top: 20px;
+  }
+}
+
+.services__text-container a,
+.services__text-container i {
+  border: none;
+  color: #377dff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
+  gap: 0.55rem;
+  font-family: "Quicksand", sans-serif;
+  font-weight: 700;
+  padding: 20px 0;
+}
+
+.services__text-container a:hover,
+.services__text-container i:hover {
+  -webkit-transform: translateY(-1rem);
+          transform: translateY(-1rem);
+  -webkit-transition: 0.8s all;
+  transition: 0.8s all;
+}
+
+.services__icons-container {
+  display: -ms-grid;
+  display: grid;
+  gap: 3rem;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
+}
+
+.services__icons-container .card {
+  width: 262px;
+  height: 269px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 30px;
+}
+
+.services__icons-container .card__icon-box {
+  width: 100px;
+  height: 100px;
+  background: #377dff;
+  border-radius: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.services__icons-container .card__icon-box img {
+  width: 42px;
+  height: 42px;
+}
+
+.services__icons-container .card h2 {
+  color: #1d1d1d !important;
+  padding: 20px;
+  text-align: center;
+  font-weight: 800 !important;
+  font-family: "Nunito", sans-serif;
+}
+
+.services__icons-container .card.red:hover {
+  -webkit-box-shadow: 4px 4px 30px rgba(0, 0, 0, 0.1);
+          box-shadow: 4px 4px 30px rgba(0, 0, 0, 0.1);
+  -webkit-transition: 0.3s all;
+  transition: 0.3s all;
+}
+
+.services__icons-container .card.red .card__icon-box {
+  background: #ff2d2d !important;
+}
+
+.services__icons-container .card.green:hover {
+  -webkit-box-shadow: 4px 4px 30px rgba(0, 0, 0, 0.1);
+          box-shadow: 4px 4px 30px rgba(0, 0, 0, 0.1);
+  -webkit-transition: 0.3s all;
+  transition: 0.3s all;
+}
+
+.services__icons-container .card.green .card__icon-box {
+  background: #7ce761 !important;
+}
+
+.services__icons-container .card.orange:hover {
+  -webkit-box-shadow: 4px 4px 30px rgba(0, 0, 0, 0.1);
+          box-shadow: 4px 4px 30px rgba(0, 0, 0, 0.1);
+  -webkit-transition: 0.3s all;
+  transition: 0.3s all;
+}
+
+.services__icons-container .card.orange .card__icon-box {
+  background: #ffa800 !important;
+}
+
+@media screen and (max-width: 575px) {
+  .services .services__text-container h2,
+  .services .services__text-container h1 {
+    padding-left: 20px;
+  }
+  .services .services__text-container .btn {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .services .services__icons-container {
+    gap: 1rem;
+    -ms-grid-columns: (minmax(150px, 1fr))[auto-fit];
+        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
   }
 }
 
