--- a/main.css
+++ b/main.css
@@ -58,7 +58,11 @@ img {
 
 header,
 .about-us,
-.services {
+.services,
+.portfolio,
+.testimonial,
+.collaboration,
+.footer {
   padding: 40px;
   max-width: 1600px;
   margin: 0 auto;
@@ -67,7 +71,11 @@ header,
 @media screen and (max-width: 575px) {
   header,
   .about-us,
-  .services {
+  .services,
+  .portfolio,
+  .testimonial,
+  .collaboration,
+  .footer {
     padding: 40px 10px;
   }
 }
@@ -616,6 +624,408 @@ main .main__container a:hover {
     -ms-grid-columns: (minmax(150px, 1fr))[auto-fit];
         grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
   }
+}
+
+.portfolio {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 2.5rem;
+  position: relative;
+}
+
+.portfolio__text-container {
+  text-align: center;
+  max-width: 674px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+@media screen and (max-width: 768px) {
+  .portfolio__text-container h1 {
+    font-size: 2rem;
+    padding: 0px 5px;
+    line-height: 41px;
+    margin-top: 20px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .portfolio__text-container p {
+    font-size: 0.95rem;
+    padding: 0 20px;
+    max-width: 100%;
+    margin-top: 10px;
+  }
+}
+
+.portfolio .bg2 {
+  position: absolute;
+  width: 98px;
+  height: 70px;
+  right: 5%;
+  top: 18%;
+}
+
+.portfolio__img-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  position: relative;
+}
+
+@media screen and (max-width: 768px) {
+  .portfolio__img-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 2rem;
+    padding: 20px;
+  }
+}
+
+.portfolio__img-container .bg {
+  position: absolute;
+  width: 98px;
+  height: 70px;
+  left: 34%;
+  top: 80px;
+  z-index: -1;
+}
+
+.portfolio a {
+  max-width: 226px;
+  font-family: "Quicksand", sans-serif;
+  font-weight: 700;
+  margin: 0 auto;
+}
+
+.portfolio a:hover {
+  background: #377dff;
+  -webkit-transition: 0.8s all;
+  transition: 0.8s all;
+  color: #ffffff;
+  -webkit-transform: translateY(-20px);
+          transform: translateY(-20px);
+}
+
+.testimonial {
+  text-align: center;
+  position: relative;
+}
+
+.testimonial .bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 98px;
+  height: 70px;
+}
+
+.testimonial .bg2 {
+  position: absolute;
+  bottom: 0;
+  right: 85px;
+  width: 98px;
+  height: 70px;
+  z-index: -1;
+}
+
+.testimonial .avatar {
+  height: 70px;
+  width: 70px;
+}
+
+.testimonial__text-container {
+  margin-bottom: 10px;
+}
+
+@media screen and (max-width: 768px) {
+  .testimonial__text-container h1 {
+    font-size: 2rem;
+    padding: 0px 5px;
+    line-height: 41px;
+    margin-top: 20px;
+  }
+}
+
+.testimonial__card-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  margin-top: 30px;
+  padding: 20px;
+}
+
+@media screen and (max-width: 768px) {
+  .testimonial__card-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    gap: 2rem;
+    margin-top: 0;
+    padding-top: 0;
+  }
+}
+
+.testimonial__card-container .card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  max-width: 380px;
+  min-height: 330px;
+  padding: 2rem;
+  background: #ffffff;
+  -webkit-box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.05);
+          box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.05);
+  border-radius: 20px;
+  gap: 1.2rem;
+}
+
+.testimonial__card-container .card__upper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 1rem;
+  padding-top: 40px;
+}
+
+@media screen and (max-width: 768px) {
+  .testimonial__card-container .card__upper {
+    padding-top: 20px;
+  }
+}
+
+.testimonial__card-container .card__upper-name {
+  text-align: left;
+}
+
+.testimonial__card-container .card__upper-name h3 {
+  font-family: "Quicksand", sans-serif;
+  font-weight: 700;
+  line-height: 34px;
+  color: #377dff;
+}
+
+.testimonial__card-container .card__upper-name span {
+  font-size: 0.9rem;
+  color: #1d1d1d;
+  opacity: 0.5;
+}
+
+.testimonial__card-container .card p {
+  max-width: 300px;
+  text-align: left;
+}
+
+@media screen and (max-width: 768px) {
+  .testimonial__card-container .card p {
+    max-width: 100%;
+    text-align: center;
+    margin-top: 10px;
+  }
+}
+
+.collaboration {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@media screen and (max-width: 768px) {
+  .collaboration {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 40px;
+    gap: 2rem;
+  }
+}
+
+.collaboration__text-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 1.4rem;
+}
+
+.collaboration__text-container h1 {
+  max-width: 271px;
+  z-index: 1;
+}
+
+@media screen and (max-width: 768px) {
+  .collaboration__text-container h1 {
+    font-size: 2rem;
+    padding: 0px 5px;
+    line-height: 41px;
+    margin-top: 20px;
+    max-width: 100%;
+  }
+}
+
+.collaboration__text-container a {
+  max-width: 193px;
+  color: #ffffff;
+  font-weight: 700;
+  background: #377dff;
+  font-family: "Quicksand", sans-serif;
+  -webkit-box-shadow: 0px 4px 8px rgba(55, 125, 255, 0.5);
+          box-shadow: 0px 4px 8px rgba(55, 125, 255, 0.5);
+}
+
+@media screen and (max-width: 768px) {
+  .collaboration__text-container a {
+    margin: 0 auto;
+    font-size: .90rem;
+  }
+}
+
+.footer {
+  background-color: #383638;
+  font-family: "Quicksand", sans-serif;
+  padding: 120px;
+  padding-bottom: 20px;
+}
+
+@media screen and (max-width: 992px) {
+  .footer {
+    padding: 20px;
+  }
+}
+
+.footer__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+@media screen and (max-width: 992px) {
+  .footer__container {
+    gap: 2rem;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .footer__container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+.footer__container-logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background: #FFFFFF;
+  border-radius: 20px;
+  width: 187px;
+  height: 88px;
+  padding: 1rem;
+}
+
+.footer__container-logo img {
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.footer__container-link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 1rem;
+}
+
+.footer__container-link h4 {
+  font-weight: 700;
+  color: #FFFFFF;
+}
+
+.footer__container-link a {
+  color: #FFFFFF;
+  opacity: .5;
+}
+
+.footer-icons-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: .95rem;
+  margin-top: 120px;
+}
+
+.footer-icons-container .wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 1rem;
+}
+
+.footer-icons-container .wrapper img {
+  width: 40px;
+  height: 40px;
+}
+
+.footer-icons-container .underline {
+  width: 500px;
+  border: 1px solid #ffffff;
+}
+
+@media screen and (max-width: 992px) {
+  .footer-icons-container .underline {
+    width: 100%;
+  }
+}
+
+.footer-icons-container span {
+  color: #fff;
+  opacity: .5;
 }
 
 body::-webkit-scrollbar {
