--- a/main.scss
+++ b/main.scss
@@ -70,7 +70,12 @@ img {
 
 header,
 .about-us,
-.services {
+.services,
+.portfolio,
+.testimonial,
+.collaboration,
+.footer
+{
   padding: 40px;
   max-width: 1600px;
   margin: 0 auto;
@@ -485,6 +490,282 @@ main {
     .services__icons-container {
       gap: 1rem;
       grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    }
+  }
+}
+
+.portfolio {
+  display: flex;
+  flex-direction: column;
+  gap: 2.5rem;
+  position: relative;
+  &__text-container {
+    text-align: center;
+    max-width: 674px;
+    width: 100%;
+    margin: 0 auto;
+
+    h1 {
+      @media screen and (max-width: 768px) {
+        font-size: 2rem;
+        padding: 0px 5px;
+        line-height: 41px;
+        margin-top: 20px;
+      }
+    }
+
+    p {
+      @media screen and (max-width: 768px) {
+        & {
+          font-size: 0.95rem;
+          padding: 0 20px;
+          max-width: 100%;
+          margin-top: 10px;
+        }
+      }
+    }
+  }
+  .bg2 {
+    position: absolute;
+    width: 98px;
+    height: 70px;
+    right: 5%;
+    top: 18%;
+  }
+  &__img-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    position: relative;
+    @media screen and (max-width: 768px) {
+      flex-direction: column;
+      gap: 2rem;
+      padding: 20px;
+    }
+
+    .bg {
+      position: absolute;
+      width: 98px;
+      height: 70px;
+      left: 34%;
+      top: 80px;
+      z-index: -1;
+    }
+  }
+  a {
+    max-width: 226px;
+    font-family: $Quicksand;
+    font-weight: $QuicksandBold;
+    margin: 0 auto;
+    &:hover {
+      background: $blue;
+      transition: 0.8s all;
+      color: #ffffff;
+      transform: translateY(-20px);
+    }
+  }
+}
+
+.testimonial {
+  text-align: center;
+  position: relative;
+
+  .bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 98px;
+    height: 70px;
+  }
+  .bg2 {
+    position: absolute;
+    bottom: 0;
+    right: 85px;
+    width: 98px;
+    height: 70px;
+    z-index: -1;
+  }
+  .avatar {
+    height: 70px;
+    width: 70px;
+  }
+  &__text-container {
+    margin-bottom: 10px;
+    h1 {
+      @media screen and (max-width: 768px) {
+        font-size: 2rem;
+        padding: 0px 5px;
+        line-height: 41px;
+        margin-top: 20px;
+      }
+    }
+  }
+  &__card-container {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 30px;
+    padding: 20px;
+    @media screen and (max-width: 768px) {
+      flex-direction: column;
+      align-items: center;
+      gap: 2rem;
+      margin-top: 0;
+      padding-top: 0;
+    }
+    .card {
+      display: flex;
+      flex-direction: column;
+      max-width: 380px;
+      min-height: 330px;
+      padding: 2rem;
+      background: #ffffff;
+      box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.05);
+      border-radius: 20px;
+      gap: 1.2rem;
+      &__upper {
+        display: flex;
+        gap: 1rem;
+        padding-top: 40px;
+        @media screen and (max-width: 768px) {
+          padding-top: 20px;
+        }
+        &-name {
+          text-align: left;
+          h3 {
+            font-family: $Quicksand;
+            font-weight: $QuicksandBold;
+            line-height: 34px;
+            color: $blue;
+          }
+          span {
+            font-size: 0.9rem;
+            color: $black;
+            opacity: 0.5;
+          }
+        }
+      }
+      p {
+        max-width: 300px;
+        text-align: left;
+        @media screen and (max-width: 768px) {
+          max-width: 100%;
+          text-align: center;
+          margin-top: 10px;
+        }
+      }
+    }
+  }
+}
+
+.collaboration{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  @media screen and (max-width: 768px) {
+    flex-direction: column;
+    padding: 40px;
+    gap: 2rem;
+  }
+  &__text-container{
+    display: flex;
+    flex-direction: column;
+    gap: 1.4rem;
+    h1{
+      max-width: 271px;
+      z-index: 1;
+      @media screen and (max-width: 768px) {
+        font-size: 2rem;
+        padding: 0px 5px;
+        line-height: 41px;
+        margin-top: 20px;
+        max-width: 100%;
+      }
+    }
+
+    a{
+      max-width: 193px;
+      color: #ffffff;
+      font-weight: $QuicksandBold;
+      background: $blue;
+      font-family: $Quicksand;
+      box-shadow: 0px 4px 8px rgba(55, 125, 255, 0.5);
+      @media screen and (max-width: 768px) {
+        margin: 0 auto;
+        font-size: .90rem;
+      }
+    }
+  
+  }
+}
+
+.footer{
+  background-color: #383638;
+  font-family: $Quicksand;
+  padding: 120px;
+  padding-bottom: 20px;
+  @media screen and (max-width:992px) {
+    padding: 20px;
+  }
+  &__container{
+    display: flex;
+    justify-content: space-between;
+    @media screen and (max-width: 992px) {
+      gap: 2rem;
+    }
+    @media screen and (max-width: 768px) {
+      flex-direction: column;
+    }
+    &-logo{
+      display: flex;
+      background: #FFFFFF;
+      border-radius: 20px;
+      width:187px; 
+      height:88px;
+      padding: 1rem;
+      img{
+        object-fit: contain;
+      }
+    }
+
+    &-link{
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      h4{
+        font-weight: $QuicksandBold;
+        color: #FFFFFF;
+      }
+      a{
+        color: #FFFFFF;
+        opacity: .5;
+      }
+    }
+  }
+  &-icons-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: .95rem;
+    margin-top: 120px;
+    .wrapper{
+      display: flex;
+      gap: 1rem;
+      img{
+        width: 40px;
+        height: 40px;
+      }
+    }
+    .underline{
+      width: 500px;
+      border: 1px solid #ffffff;
+
+      @media screen and (max-width:992px) {
+      width: 100%;        
+      }
+    }
+    span{
+      color: #fff;
+      opacity: .5;
     }
   }
 }
